Updated to version 2.6.0 with fixed scrollbars UI and Element Selectors in Component.

--- a/src/app/components/messages/messages.component.css
+++ b/src/app/components/messages/messages.component.css
@@ -3,13 +3,3 @@
   display: inline-block;
   vertical-align: middle;
 }
-
-.list-wrapper {
-  max-height: 340px;
-  overflow-y: auto;
-}
-
-.login-header-image {
-  background-image: url('/assets/logo/Onimind_Logo.png');
-  background-size: cover;
-}
