--- a/src/styles.css
+++ b/src/styles.css
@@ -255,3 +255,11 @@ body.mobile-view {
   left: 0px !important;
   top: 0px !important;
 }
+
+perfect-scrollbar > .ps.ps--scrolling-y > .ps__rail-y {
+  background-color: transparent !important;
+}
+
+.ps .ps__rail-y:hover {
+  background-color: transparent !important;
+}
